[package]
name = "states-validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] } 
serde_with = "2.2.0"
serde_derive = "1.0"
serde_json = "1.0"
dotenvy = "0.15.6"
log4rs = "1.2.0"
log = "0.4"

[dependencies.sea-orm]
version = "0.11.0"
features = ["sqlx-postgres", "runtime-tokio-native-tls", "sea-orm-macros", "with-chrono", "with-json", "postgres-array"]

